# modernvbert

./: .gitignore  LICENSE  README.md  aggregate_ncdg_at_5.py  aggregate_ndcg_at_5.py  contrastive_training.job  contrastive_training_sparse.job  contrastive_training_sparse_m2_h100.job  create_query_samples.py  eval_vidore_v1.job  eval_vidore_v2.job  eval_vidore_v3.job  inference.job  inference.py  latency_experiment.ipynb  log.txt  make_cpt.py  make_cpt_old_m2_only.py  sampled_queries.csv  sbatch_train_colmodernvbert_m2.sh  test.ipynb  train_colmodernvbert_m2.sh
assets/: blogpost.md
bash/: train_colmodernvbert.sh  (+1 more)
modernvbert/: README.md  pyproject.toml
modernvbert/.github/workflows/: python-tests.yml
modernvbert/src/modernvbert/contrastive_training/: config.py  evaluate.py  evaluate_updated.py  evaluate_vidore_v3.py  loaders.py  train.py
modernvbert/src/modernvbert/contrastive_training/modernvbert/doc/: train_modernvbert_sparse.yaml
modernvbert/src/modernvbert/contrastive_training/vidore_v3/: _create_table.py  benchmark.py  filter_tasks.py  get_tasks.py
modernvbert/src/modernvbert/contrastive_training/vidore_v3/abstasks/: task_metadata.py
modernvbert/src/modernvbert/contrastive_training/vidore_v3/types/: statistics.py
modernvbert/src/modernvbert/models/modernvbert/: __init__.py  configuration_modernvbert.py  modeling_modernvbert.py
modernvbert/src/modernvbert/models/vllama/: configuration_vllama.py  modeling_vllama.py
modernvbert/src/modernvbert/natcap/: README.md  async_annotate.py  task_metadata.jsonl
modernvbert/tests/: test_forward.py
(+183 files in other folders)
